# pvr.iptvsimple

./: CMakeLists.txt  README.md
src/: PVRIptvData.cpp  client.cpp  client.h
